<?xml version="1.0" encoding="utf-8"?>

<!-- single ingredient element inside IngredientsActivity layout (author Francesco Pham) -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ingredient_view"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:id="@+id/letter_icon_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/letter_icon" />

    <!-- Name -->
    <TextView
        android:id="@+id/inci_name_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/letter_icon_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:id="@+id/function_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/inci_name_view"
        app:layout_constraintLeft_toRightOf="@id/letter_icon_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"/>

</android.support.constraint.ConstraintLayout>

